compiler/testData/diagnostics/tests/duplicateJvmSignature/traitImpl/oneTrait.kt
interface T {
    fun getX() = 1
}

class <!CONFLICTING_JVM_DECLARATIONS!>C<!> : T {
    <!CONFLICTING_JVM_DECLARATIONS!>konst x<!> = 1
}